Added Bloomberg Capstone

--- a/index.html
+++ b/index.html
@@ -151,19 +151,18 @@
                 </ul>
               </section>
             </div>
-            <!-- <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
               <section>
-                <span class="ds-year">2018 - 2019</span>
-                <h3 class="ds-officename">Lexind</h3>
-                <span class="ds-department">Senior app developer</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum.</p>
+                <span class="ds-year">May to August 2023</span>
+                <h3 class="ds-officename">Bloomberg</h3>
+                <span class="ds-department">Industry Capstone Project: Thematic Investment using NLP</span>
                 <ul>
-                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut.</li>
-                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut.</li>
+                  <li>Designing & refining methodologies for thematic identification, leveraging modern NLP techniques such as Semantic Embedding, Named Entity Recognition, Topic Modelling, & Text Classification.</li>
+                  <li>Collaborating with stakeholders to gather and integrate diverse data sources, including revenue segmentation, company descriptions, supply chain information, & company transcripts, to enhance the accuracy & granularity of thematic identification.</li>
+                  <li>Developing algorithms & methodologies to calculate exposure scores, enabling quantitative assessment of thematic investment levels for individual companies.    </li>
                 </ul>
               </section>
-            </div> -->
+            </div>
         </div>
      </div>
    </div>
