--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <section>
             <h2 class="ds-heading">About Me</h2>
             <p>I am an aspiring Quant skilled in Data Analytics, Machine Learning and Technical Consulting. My expertise lies in converting business problems into technical solutions and translating raw data into actionable insights. Proficient in Python, C++, SQL, Pandas, Numpy, and Tensorflow. I have passed CFA Level 1 exam.</p>
-            <p>Currently, I am pursuing Masters in Financial Engineering from NYU and working on Capstone project with Bloomberg as Quantitative Trader in the field of Thematic Investing using NLP. My interests are to solve financial problems using computing and mathematical skills.</p>
+            <p>Currently, I am pursuing Masters in Financial Engineering from NYU and working on a Capstone project with Bloomberg in the field of Thematic Investing using Natural Language Processing (NLP) Techniques. My interests are to solve financial problems using computing and mathematical skills.</p>
             <p>Looking forward to connecting with you! </p>
             <div class="ds-button-sec text-center">
                 <a href="https://drive.google.com/file/d/1mx95GT-iq25Nru8eI5nhfYHt_ZztfK27/view?usp=drive_link" class="ds-button">Download Resume</a>
