Changed Resume link

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <p>Currently, I am pursuing Masters in Financial Engineering from NYU and working on a Capstone project with Bloomberg in the field of Thematic Investing using Natural Language Processing (NLP) Techniques. My interests are to solve financial problems using computing and mathematical skills.</p>
             <p>Looking forward to connecting with you! </p>
             <div class="ds-button-sec text-center">
-                <a href="https://drive.google.com/drive/u/0/folders/1W88gjwd2I_eSL35RI49Cs9aMn0jPwYoJ" class="ds-button">Download Resume</a>
+                <a href="https://drive.google.com/file/d/1mx95GT-iq25Nru8eI5nhfYHt_ZztfK27/view?usp=drive_link" class="ds-button">Download Resume</a>
             </div>
         </section>
       </div>
