--- a/index.html
+++ b/index.html
@@ -83,11 +83,12 @@
       <div class="container">
         <section>
             <h2 class="ds-heading">About Me</h2>
-            <p>I am an aspiring Quant skilled in Data Analytics, Machine Learning and Technical Consulting. My expertise lies in converting business problems into technical solutions and translating raw data into actionable insights. Proficient in Python, C++, SQL, Pandas, Numpy, and Tensorflow. I have passed CFA Level 1 exam.</p>
-            <p>Currently, I am pursuing Masters in Financial Engineering from NYU and working on a Capstone project with Bloomberg in the field of Thematic Investing using Natural Language Processing (NLP) Techniques. My interests are to solve financial problems using computing and mathematical skills.</p>
-            <p>Looking forward to connecting with you! </p>
+            <p>I am pursuing Masters in Financial Engineering from NYU. I am an avid enthusiast in the intersection of Capital Markets, Engineering, and Technology. I thrive on building projects from scratch or gaining a holistic understanding of existing ones to contribute my ideas. My unwavering drive to solve mathematical problems and create tangible results has led me to venture into the world of Quantitative Finance.</p>
+            <p>My passion lies in bridging the gap between Quantitative Finance and Data Science, aiming to develop effective and robust solutions to business problems. I am keen on adding value in key areas such as Predictive Modeling, Quantitative Research & Analysis, Asset Management, Risk Analytics, and other relevant domains. With proficiency in multiple programming languages, including Python, C/C++, Java, SQL, I am equipped to handle complex challenges and deliver impactful results. My expertise lies in converting business problems into technical solutions and translating raw data into actionable insights. I have passed CFA Level 1 exam.</p>
+            <p>I am currently seeking Fall/Spring internship and Full-time opportunities in the Quantitative finance domain. I am eager to contribute my skills and drive to solve complex challenges.</p>
+            <p>Let's connect and explore how I can add value to your team. </p>
             <div class="ds-button-sec text-center">
-                <a href="https://drive.google.com/file/d/1mx95GT-iq25Nru8eI5nhfYHt_ZztfK27/view?usp=drive_link" class="ds-button">Download Resume</a>
+                <a href="https://drive.google.com/file/d/1F7oHmAkMX1kN5TA-Lt8nG4grrEOfGpRq/view?usp=drive_link" class="ds-button">Download Resume</a>
             </div>
         </section>
       </div>
@@ -157,10 +158,9 @@
                 <h3 class="ds-officename">Bloomberg</h3>
                 <span class="ds-department">Industry Capstone Project: Thematic Investment using NLP</span>
                 <ul>
-                  <li>Designing & refining methodologies for thematic identification, leveraging modern NLP techniques such as Semantic Embedding, Named Entity Recognition, Topic Modelling, & Text Classification.</li>
-                  <li>Collaborating with stakeholders to gather and integrate diverse data sources, including revenue segmentation, company descriptions, supply chain information, & company transcripts, to enhance the accuracy & granularity of thematic identification.</li>
-                  <li>Developing algorithms & methodologies to calculate exposure scores, enabling quantitative assessment of thematic investment levels for individual companies.    </li>
-                </ul>
+                  <li>Designed & refined methodologies for thematic identification, using NLP techniques including Semantic Embedding, Named Entity Recognition, Topic Modelling & Text Classification.</li>
+                  <li>Leveraged supply chain overlap to calculate theme related exposure score for companies; achieved 94% precision & enhanced the granularity of thematic identification.</li>
+                </ul> 
               </section>
             </div>
         </div>
