Added minor Changes

--- a/index.html
+++ b/index.html
@@ -54,20 +54,20 @@
           <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
             <section>
                 <h1>
-                  I'm Shashank Rotti
-                  <span>Aspiring Quant based in New York, USA.</span>
+                  I'm Shashank Suresh Rotti
+                  <span>Aspiring Quant/Data Scientist/Machine Learning Engineer.</span>
                 </h1>
                 <ul class="ds-numbervalulist">
                   <li>
-                    <strong>NYU</strong>
+                    <strong>NYU, Tandon School of Engineering</strong>
                     <span>Masters in Financial Engineering</span>
                   </li>
                   <li>
                     <strong>3+ Years</strong>
-                    <span>Analyst @ Deloitte</span>
+                    <span>Consultant @ Deloitte</span>
                   </li>
                   <li>
-                    <strong>PESIT</strong>
+                    <strong>PES Institute of Technology, Bangalore, India</strong>
                     <span>B.E in Computer Science</span>
                   </li>
                 </ul>
@@ -83,12 +83,12 @@
       <div class="container">
         <section>
             <h2 class="ds-heading">About Me</h2>
-            <p>I am pursuing Masters in Financial Engineering from NYU. I am an avid enthusiast in the intersection of Capital Markets, Engineering, and Technology. I thrive on building projects from scratch or gaining a holistic understanding of existing ones to contribute my ideas. My unwavering drive to solve mathematical problems and create tangible results has led me to venture into the world of Quantitative Finance.</p>
+            <p>I am pursuing Masters in Financial Engineering from NYU. I am an avid enthusiast in the intersection of Capital Markets, Engineering, and Technology. I thrive on building projects from scratch or gaining a holistic understanding of existing ones to contribute my ideas. My unwavering drive to solve mathematical problems and create tangible results has led me to venture into the world of Quantitative Finance and Data Science.</p>
             <p>My passion lies in bridging the gap between Quantitative Finance and Data Science, aiming to develop effective and robust solutions to business problems. I am keen on adding value in key areas such as Predictive Modeling, Quantitative Research & Analysis, Asset Management, Risk Analytics, and other relevant domains. With proficiency in multiple programming languages, including Python, C/C++, Java, SQL, I am equipped to handle complex challenges and deliver impactful results. My expertise lies in converting business problems into technical solutions and translating raw data into actionable insights. I have passed CFA Level 1 exam.</p>
-            <p>I am currently seeking Fall/Spring internship and Full-time opportunities in the Quantitative finance domain. I am eager to contribute my skills and drive to solve complex challenges.</p>
+            <p>I am currently seeking Spring internship and Full-time opportunities in the Quantitative finance and Data Science domains. I am eager to contribute my skills and drive to solve complex challenges.</p>
             <p>Let's connect and explore how I can add value to your team. </p>
             <div class="ds-button-sec text-center">
-                <a href="https://drive.google.com/file/d/1F7oHmAkMX1kN5TA-Lt8nG4grrEOfGpRq/view?usp=drive_link" class="ds-button">Download Resume</a>
+                <a href="https://drive.google.com/file/d/1lrin3jMXPxNkXYKU6qfuR8cDCVwGaPYj/view?usp=drive_link" class="ds-button">Download Resume</a>
             </div>
         </section>
       </div>
@@ -104,6 +104,7 @@
              <ul class="ds-skills-list">
                <li>Python</li>
                <li>C++</li>
+               <li>MATLAB</li>
                <li>SQL</li>
                <li>Linux</li>
                <li>Keras</li>
@@ -123,6 +124,8 @@
               <li>NLP</li>
               <li>Forecasting</li>
               <li>Statistical Modelling</li>
+              <li>Scala</li>
+              <li>Spark</li>
               <li>Github</li>
             </ul>
           </div>
@@ -140,7 +143,7 @@
               <section>
                 <span class="ds-year">2018 - 2022</span>
                 <h3 class="ds-officename">Deloitte</h3>
-                <span class="ds-department">Analyst, Strategy & Analytics team</span>
+                <span class="ds-department">Consultant, Analyst</span>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum.</p> -->
                 <ul>
                   <li><b>Feature Selection Research:</b> Received Applause award for Implementing filter & wrapper-based feature selection techniques to
