Added minor Changes

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
             <section>
                 <h1>
                   I'm Shashank Suresh Rotti
-                  <span>Aspiring Quant/Data Scientist/Machine Learning Engineer.</span>
+                  <span>Aspiring Quant/Data Scientist</span>
                 </h1>
                 <ul class="ds-numbervalulist">
                   <li>
-                    <strong>NYU, Tandon School of Engineering</strong>
+                    <strong>NYU</strong>
                     <span>Masters in Financial Engineering</span>
                   </li>
                   <li>
@@ -67,7 +67,7 @@
                     <span>Consultant @ Deloitte</span>
                   </li>
                   <li>
-                    <strong>PES Institute of Technology, Bangalore, India</strong>
+                    <strong>PESIT, Bangalore, India</strong>
                     <span>B.E in Computer Science</span>
                   </li>
                 </ul>
