--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
             <section>
                 <h1>
-                  I'm Shashank Suresh Rotti
+                  I'm Shashank Rotti
                   <span>Aspiring Quant/Data Scientist</span>
                 </h1>
                 <ul class="ds-numbervalulist">
