Added Trade Terminal experience

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <p>I am currently seeking Spring internship and Full-time opportunities in the Quantitative finance and Data Science domains. I am eager to contribute my skills and drive to solve complex challenges.</p>
             <p>Let's connect and explore how I can add value to your team. </p>
             <div class="ds-button-sec text-center">
-                <a href="https://drive.google.com/file/d/1lrin3jMXPxNkXYKU6qfuR8cDCVwGaPYj/view?usp=drive_link" class="ds-button">Download Resume</a>
+                <a href="https://drive.google.com/file/d/1btgixSfO-IDQxK3DDmszu7buUzbRdmzg/view?usp=sharing" class="ds-button">Download Resume</a>
             </div>
         </section>
       </div>
@@ -159,10 +159,23 @@
               <section>
                 <span class="ds-year">May to August 2023</span>
                 <h3 class="ds-officename">Bloomberg</h3>
-                <span class="ds-department">Industry Capstone Project: Thematic Investment using NLP</span>
+                <span class="ds-department">Quantitative Researcher - Industry Capstone: Thematic Investment using NLP</span>
                 <ul>
                   <li>Designed & refined methodologies for thematic identification, using NLP techniques including Semantic Embedding, Named Entity Recognition, Topic Modelling & Text Classification.</li>
                   <li>Leveraged supply chain overlap to calculate theme related exposure score for companies; achieved 94% precision & enhanced the granularity of thematic identification.</li>
+                </ul> 
+              </section>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+              <section>
+                <span class="ds-year">Jan 2024 - Present</span>
+                <h3 class="ds-officename">Trade Terminal</h3>
+                <span class="ds-department">Quantitative Researcher Intern</span>
+                <ul>
+                  <li>Advancing econometric model development for cross-exchange market making, targeting lead-lag arbitrage to harness price
+                    discrepancies in high-frequency trading environments.</li>
+                  <li>Developing an in-house Python-based trading system for paper-trading, quantitatively assessing strategy performance & fine-tuning
+                    trade placement to capitalize on identified price differentials.</li>
                 </ul> 
               </section>
             </div>
