Made latest changes - September 2024

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <section>
                 <h1>
                   I'm Shashank Rotti
-                  <span>Aspiring Quant/Data Scientist</span>
+                  <span>Quant | Data Scientist</span>
                 </h1>
                 <ul class="ds-numbervalulist">
                   <li>
@@ -63,11 +63,15 @@
                     <span>Masters in Financial Engineering</span>
                   </li>
                   <li>
-                    <strong>3+ Years</strong>
-                    <span>Consultant @ Deloitte</span>
+                    <strong>Trade Terminal</strong>
+                    <span>Quantitative Researcher</span>
                   </li>
                   <li>
-                    <strong>PESIT, Bangalore, India</strong>
+                    <strong>Deloitte</strong>
+                    <span>Technical Analyst | Technical Consultant </span>
+                  </li>
+                  <li>
+                    <strong>PES Institute of Technology, India</strong>
                     <span>B.E in Computer Science</span>
                   </li>
                 </ul>
@@ -83,12 +87,11 @@
       <div class="container">
         <section>
             <h2 class="ds-heading">About Me</h2>
-            <p>I am pursuing Masters in Financial Engineering from NYU. I am an avid enthusiast in the intersection of Capital Markets, Engineering, and Technology. I thrive on building projects from scratch or gaining a holistic understanding of existing ones to contribute my ideas. My unwavering drive to solve mathematical problems and create tangible results has led me to venture into the world of Quantitative Finance and Data Science.</p>
+            <p>I am a Masters in Financial Engineering graduate from NYU. I am an avid enthusiast in the intersection of Capital Markets, Engineering, and Technology. I thrive on building projects from scratch or gaining a holistic understanding of existing ones to contribute my ideas. My unwavering drive to solve mathematical problems and create tangible results has led me to venture into the world of Quantitative Finance and Data Science.</p>
             <p>My passion lies in bridging the gap between Quantitative Finance and Data Science, aiming to develop effective and robust solutions to business problems. I am keen on adding value in key areas such as Predictive Modeling, Quantitative Research & Analysis, Asset Management, Risk Analytics, and other relevant domains. With proficiency in multiple programming languages, including Python, C/C++, Java, SQL, I am equipped to handle complex challenges and deliver impactful results. My expertise lies in converting business problems into technical solutions and translating raw data into actionable insights. I have passed CFA Level 1 exam.</p>
-            <p>I am currently seeking Spring internship and Full-time opportunities in the Quantitative finance and Data Science domains. I am eager to contribute my skills and drive to solve complex challenges.</p>
-            <p>Let's connect and explore how I can add value to your team. </p>
+            <p>I am eager to contribute my skills and drive to solve complex challenges. Let's connect and explore how I can add value to your team.</p>
             <div class="ds-button-sec text-center">
-                <a href="https://drive.google.com/file/d/1mlsGbtNzBkdPaBFX7vrdinwo8j_pjHEp/view?usp=drive_link" class="ds-button">Download Resume</a>
+                <a href="https://drive.google.com/file/d/1UG3yB10uLfC7-CqwqfFgr9n3mwJOgSup/view?usp=drive_link" class="ds-button">Download Resume</a>
             </div>
         </section>
       </div>
@@ -107,7 +110,6 @@
                <li>MATLAB</li>
                <li>SQL</li>
                <li>Linux</li>
-               <li>Keras</li>
                <li>Sklearn</li>
                <li>Pandas</li>
                <li>Numpy</li>
@@ -118,14 +120,18 @@
           <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
             <h2 class="ds-heading">Other Skills</h2>
             <ul class="ds-skills-list">
-              <li>XGBoost</li>
-              <li>PCA</li>
               <li>Regression</li>
               <li>NLP</li>
               <li>Forecasting</li>
               <li>Statistical Modelling</li>
-              <li>Scala</li>
-              <li>Spark</li>
+              <li>Time Series Analysis</li>
+              <li>Machine Learning</li>
+              <li>Deep Learning</li>
+              <li>Quantitative Analysis</li>
+              <li>Financial Modeling</li>
+              <li>Portfolio Management</li>
+              <li>Risk Management</li>
+              <li>Trading Strategies</li>
               <li>Github</li>
             </ul>
           </div>
@@ -143,15 +149,11 @@
               <section>
                 <span class="ds-year">2018 - 2022</span>
                 <h3 class="ds-officename">Deloitte</h3>
-                <span class="ds-department">Consultant, Analyst</span>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum.</p> -->
+                <span class="ds-department">Technical Consultant, Technical Analyst</span>
                 <ul>
-                  <li><b>Feature Selection Research:</b> Received Applause award for Implementing filter & wrapper-based feature selection techniques to
-                    improve the classification accuracy of fraudulent claims detection by 5% on a dataset of 30M claims.</li>
-                  <li><b>Data Pipeline Transformation:</b> Developed Directed Acyclic Graphs (DAG) & implemented Python ETL scripts to pipeline claims
-                    data from legacy RDBMS database to the cloud data warehouse, resulting in improved downstream analysis & reporting.</li>
-                  <li><b>Data Visualization tool:</b> Created custom real-time data visualization tool by automating data processing, generating cross-
-                    functional reports. Achieved monthly time savings of 40 hours, improving workflow management, resource utilization, & order/task tracking.</li>
+                  <li>Developed a data lake architecture on AWS, using Python for ETL and AWS Glue for data management. Transitioned claims data from legacy databases to AWS S3, enhancing analytics and saving $65M annually.</li>
+                  <li>Built a customized data visualization tool using Python and Tableau to integrate data from multiple vendors' data science infrastructure, enabling validation, data profiling, and achieving a 30% reduction in processing time.</li>
+                  <li>Worked in an agile software development environment to identify and rectify critical payment flow functionality issues for a client, saving $50M in annual revenue leakage.</li> 
                 </ul>
               </section>
             </div>
@@ -172,10 +174,10 @@
                 <h3 class="ds-officename">Trade Terminal</h3>
                 <span class="ds-department">Quantitative Researcher Intern</span>
                 <ul>
-                  <li>Advancing econometric model development for cross-exchange market making, targeting lead-lag arbitrage to harness price
-                    discrepancies in high-frequency trading environments.</li>
-                  <li>Developing an in-house Python-based trading system for paper-trading, quantitatively assessing strategy performance & fine-tuning
-                    trade placement to capitalize on identified price differentials.</li>
+                  <li> Implemented a market-making strategy from concept to execution using modular Python code, integrating real-time order updates via WebSocket and REST API for custom order management, resulting in a 2% profit increase and a portfolio activity ratio of 56.</li>
+                  <li>Conducted research and implemented an autoregressive distributed lag logistic regression model to improve the hit rate of lead-lag arbitrage strategies by 5%, thereby boosting profitability by better spread capture.</li>
+                  <li>Developed Python scripts for data aggregation and processing from Influx DB, Prometheus, and MongoDB, enabling real-time visualization of risk metrics on Grafana, which enhanced portfolio risk management efficiency by 50%.</li>
+                  <li>Developed a statistical arbitrage strategy using Order flow imbalance, achieving 40% CAGR with a maximum drawdown of 2.8% in backtesting; currently optimizing order execution for seamless performance.</li>
                 </ul> 
               </section>
             </div>
