--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <span>Technical Analyst | Technical Consultant </span>
                   </li>
                   <li>
-                    <strong>PES Institute of Technology, India</strong>
+                    <strong>PESIT, India</strong>
                     <span>B.E in Computer Science</span>
                   </li>
                 </ul>
