--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
               <section>
-                <span class="ds-year">Jan 2024 - Present</span>
+                <span class="ds-year">Jan 2024 - May 2024</span>
                 <h3 class="ds-officename">Trade Terminal</h3>
                 <span class="ds-department">Quantitative Researcher Intern</span>
                 <ul>
