added changes to the heading

--- a/index.html
+++ b/index.html
@@ -55,26 +55,38 @@
             <section>
                 <h1>
                   I'm Shashank Rotti
-                  <span>Quant | Data Scientist</span>
+                  <span>Data Scientist at Cornerstone Research</span>
                 </h1>
-                <ul class="ds-numbervalulist">
-                  <li>
-                    <strong>NYU</strong>
-                    <span>Masters in Financial Engineering</span>
-                  </li>
-                  <li>
-                    <strong>Trade Terminal</strong>
-                    <span>Quantitative Researcher</span>
-                  </li>
-                  <li>
-                    <strong>Deloitte</strong>
-                    <span>Technical Analyst | Technical Consultant </span>
-                  </li>
-                  <li>
-                    <strong>PESIT, India</strong>
-                    <span>B.E in Computer Science</span>
-                  </li>
-                </ul>
+                <div class = "work-experience">
+                  <h2>Work Experience</h2>
+                  <ul class = "ds-numbervalulist">
+                    <li>
+                      <strong>Cornerstone Research</strong>
+                      <span>Data Scientist</span>
+                    </li>
+                    <li>
+                      <strong>Trade Terminal</strong>
+                      <span>Quantitative Researcher</span>
+                    </li>
+                    <li>
+                      <strong>Deloitte</strong>
+                      <span>Technical Analyst | Technical Consultant </span>
+                    </li>
+                  </ul>
+                </div>
+                <div class = "education">
+                  <h2>Education</h2>
+                  <ul class="ds-numbervalulist">
+                    <li>
+                      <strong>New York University</strong>
+                      <span>Masters in Financial Engineering</span>
+                    </li>
+                    <li>
+                      <strong>PES University, India</strong>
+                      <span>B.E in Computer Science</span>
+                    </li>
+                  </ul>
+                </div>
             </section>
           </div>
         </div>
