added changes to the heading

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
       <!-- Main CSS -->
       <link href="assets/css/main.css" rel="stylesheet">
-
+      <!-- Custom CSS -->
+      <link href="assets/css/custom.css" rel="stylesheet">
 
     <title>Shashank Rotti Portfolio</title>
   </head>
@@ -48,7 +49,7 @@
         <div class="row">
           <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
             <figure>
-              <img src="assets/images/profile-image.jpg">
+              <img src="assets/images/profile-image.jpg" alt="Profile Image">
             </figure>
           </div>
           <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
