added changes to the heading

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
                       <span>Data Scientist</span>
                     </li>
                     <li>
+                      <strong>Bank Of America</strong>
+                      <span>Application Architect V</span>
+                    </li>
+                    <li>
                       <strong>Trade Terminal</strong>
                       <span>Quantitative Researcher</span>
                     </li>
