--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
              <h2 class="ds-heading">Core Skills</h2>
              <ul class="ds-skills-list">
                <li>Python</li>
+               <li>R</li>
                <li>C++</li>
                <li>MATLAB</li>
                <li>SQL</li>
@@ -150,7 +151,7 @@
               <li>Portfolio Management</li>
               <li>Risk Management</li>
               <li>Trading Strategies</li>
-              <li>Github</li>
+              <li>Git</li>
             </ul>
           </div>
         </div>
